TestSuite/errors/err0519_format_string.pas
//!Встречена неправильная форматная строка
begin
  var s := $'{{{';
end.